--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "powerbuoy/sleek-login",
+    "description": "Improves the login screen and hides admin bar from subscribers, also redirects them to the home page upon login.",
     "license": "GPL-2.0-or-later",
     "authors": [
         {
